...
	"Record_created_successfully": "Data gemt!",
	"Record_updated_successfully": "Data er opdateret!",
	"Delete_record": "Slet data",
	"Are_you_sure_you_want_to_delete_this_record": "Er du sikker på, at du vil slette disse data?",
	"Record_deleted_successfully": "Data slettet",
	"Share_record": "Del data",
	"Share": "Dele",
	"Record_shared_successfully": "Data blev delt",
	"Remove_access": "Fjern adgang",
	"Are_you_sure_you_want_to_remove_access_to_the_record": "Er du sikker på, at du vil fjerne al adgang til dataene?",
	"Record_authorization_removed_successfully": "Record-autorisation fjernet",
	"Update_authorizations": "Opdater autorisationer",
	"Request_accepted_sucessfully": "Anmodning accepteret",
...
	"Unnamed_Key": "Unnamed Key",
	"Copy_API_Key": "Kopiér API-nøgle",
	"You_can_close_this_dialog_in_seconds": "You can close this dialog in {dialogTimer} seconds",
	"You_can_now_close_this_dialog": "You can now close this dialog",
	"Close_seconds": "Luk ({dialogTimer})",
	"An_unexpected_error_occurred": "An unexpected error occurred",
	"Close": "Luk",
	"Import": "Importér",
	"Edit_wallet": "Rediger wallet",
	"Failed_to_fetch_wallet_metadata": "Mislykkedes to fetch wallet metadata",
	"Invalid_image_URL_error": "Invalid image URL. Please check the URL and try again.",
	"Logo_preview": "Logo preview",
	"Fetching_fallback": "Fetching...",
...
