appId: eu.europa.ec.euidi
name: FCAF precondition - Presentation redirect URI
tags:
  - fcaf
  - precondition
  - supportive
  - redirect-uri
---
- stopApp
- openLink:
    link: "${SUPPORTIVE_REDIRECT_PRESENTATION_URL}"
    autoVerify: false
    browser: false
- runFlow:
    file: choose-eudi-wallet.yaml
- extendedWaitUntil:
    visible: "Welcome back|Share|Cancel|Close"
    timeout: 100000
- runFlow:
    when:
      visible: "Welcome back"
    commands:
      - tapOn:
          point: "11%,40%"
      - inputText: "123456"
- extendedWaitUntil:
    visible: "Share"
    timeout: 30000
- tapOn:
    text: "Share"
    enabled: true
- extendedWaitUntil:
    visible: "verify your identity|PIN"
    timeout: 30000
- inputText: "123456"
- extendedWaitUntil:
    visible: "Close"
    timeout: 30000
- tapOn: "Close"
- extendedWaitUntil:
    visible: "Define your presentation request"
    timeout: 30000
- assertVisible: "Define your presentation request"
- takeScreenshot: fcaf-supportive-redirect-uri-opened
